# user-auth-api

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  render.yaml
.devcontainer/: Dockerfile  devcontainer.json
src/: main.py
src/api/: __init__.py  auth_router.py
src/application/: auth_service.py  register_user.py
src/domain/: user.py
src/infrastructure/: database.py  models.py  security.py
src/tests/: test_auth.py
